<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="net.maxeddy.maxreps.EditRoutineActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_routine_cycle_length_label" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/cycle_length_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_routine_cycle_length_one"
            android:onClick="onCycleLengthRadioButtonClick"/>
        <RadioButton android:id="@+id/cycle_length_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_routine_cycle_length_two"
            android:onClick="onCycleLengthRadioButtonClick"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_routine_num_workouts_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:id="@+id/numWorkoutsSlider"
            android:max="6"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.2"
            android:text="@string/edit_routine_num_workouts_text"
            android:textSize="16sp"
            android:id="@+id/numWorkoutsText" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_routine_schedule_label" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daysList"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
